# test-rs

./: Cargo.toml
src/: main.rs
