[package]
name = "test-rs"
version = "0.1.0-callahan"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version="4.0.32", features = ["derive"] }
memmap = "0.7.0"
rayon = "1.6.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
